css/style.css
.md-toolbar-tools label,
.md-toolbar-tools input {
  color: inherit !important;
}

.fade.ng-enter { animation: fadeInDown 0.5s; }
.fade.ng-leave { animation: fadeOutUp 0.5s; }

.fixed.md-fab {
  position: fixed !important;
}

.tile {
  position: relative;
  display: inline-block;
  padding: 5px;
  margin: 5px;
  height: 50px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;

  width: calc(100% - 10px);
}
@media (min-width: 900px) {
  .tile { width: calc(50% - 10px); }
}
@media (min-width: 1100px) {
  .tile { width: calc(33.3333% - 10px); }
}
@media (min-width: 1500px) {
  .tile { width: calc(25% - 10px); }
}
@media (min-width: 1850px) {
  .tile { width: calc(20% - 10px); }
}
@media (min-width: 2100px) {
  .tile { width: calc(16.6666% - 10px); }
}

